# docs/swagger.yaml
@@ -133,6 +133,7 @@ definitions:
     required:
     - commentText
     - objId
+    - type
     - userId
     type: object
   enum.ListForm:
@@ -681,6 +682,31 @@ paths:
       summary: 保存专栏
       tags:
       - articleColumn专栏
+  /commentInfo/getListById:
+    get:
+      consumes:
+      - application/json
+      description: 根据id获取评论列表
+      parameters:
+      - description: 对象id
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.ResponseResultInfo'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.EmptyInfo'
+      summary: 根据id获取评论列表
+      tags:
+      - commentInfo评论
   /commentInfo/save:
     post:
       consumes:
